2010-07-07  Marek Habersack  <mhabersack@novell.com>

	* TreeView.cs: 4.0 rendering changes.
	When using registered CSS classes, the node style must use them in
	reverse order.

2010-07-06  Marek Habersack  <mhabersack@novell.com>

	* HyperLink.cs: the associated image is not rendered using the
	Image control.

2010-07-02  Marek Habersack  <mhabersack@novell.com>

	* Menu.cs: 4.0 API updates.

	* GridView.cs: implemented 4.0 properties -
	SortedAscendingCellStyle, SortedAscendingHeaderStyle,
	SortedDescendingCellStyle, SortedDescendingHeaderStyle,
	ClientIDRowSuffix, ClientIDRowSuffixDataKeys, ShowHeaderWhenEmpty
	along with associated rendering changes.

	* DetailsView.cs, FormView.cs, GridView.cs: 4.0 API changes -
	renamed ShowPage to SetPageIndex and made it public.
	Added 4.0 interfaces to inheritance list and implemented them.

	* DataKeyArray.cs: added internal constructor which accepts IList
	instead of ArrayList. Changed the 'keys' field type to IList.

	* ContainedTable.cs: the 'id' attribute must be rendered last.

	* CheckBox.cs, CheckBoxList.cs, SiteMapPath.cs, Table.cs,
	TableStyle.cs, TextBox.cs, WebControl.cs: 4.0 rendering changes.

	* Calendar.cs, CompositeControl.cs, DropDownList.cs, HyperLink.cs,
	Image.cs, ImageButton.cs, Label.cs, LinkButton.cs, LoginName.cs,
	Panel.cs, Table.cs, TableCell.cs, TableRow.cs:
	added new 4.0 property, SupportsDisabledAttribute.

2010-06-21  Marek Habersack  <mhabersack@novell.com>

	* BaseValidator.cs, BulletedList.cs, Calendar.cs, CheckBox.cs,
	CheckBoxList.cs, DataGrid.cs, DropDownList.cs, GridView.cs,
	HyperLink.cs, ImageButton.cs, LinkButton.cs, ListBox.cs,
	ListControl.cs, Menu.cs, RadioButton.cs, RadioButtonList.cs,
	RepeatInfo.cs, Repeater.cs, TextBox.cs, TreeView.cs,
	ValidationSummary.cs, WebControl.cs: use WebControl.IsEnabled
	instead of Enabled wherever necessary.

2010-06-16  Marek Habersack  <mhabersack@novell.com>

	* FormView.cs: row values must be retrieved with inclusion of