@@ -1,3 +1,9 @@
+2010-07-08  Marek Habersack  <mhabersack@novell.com>
+
+	* ImageMap.cs: implemented missing Enabled property (2.0+)
+	RaisePostBackEvent must be protected and virtual (2.0+)
+	NavigateUrl is ignored if the control is disabled (4.0)
+
 2010-07-07  Marek Habersack  <mhabersack@novell.com>
 
 	* TreeView.cs: 4.0 rendering changes.
